// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallDetails Should match 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: transparent;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c1:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c1:hover:enabled {
  border-color: #fff;
}

.c1:active:enabled {
  border: 1px solid #303338;
}

.c1:disabled {
  color: #303338;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c3 {
  padding: 0.125rem 0.375rem;
  background-color: #303338;
  border-radius: 10px;
}

.c4 {
  margin: 0;
  padding: 0;
  color: #fff;
  background-color: transparent;
}

.c2 {
  font-size: 12px;
  margin: 0;
  padding: 4px 8px;
}

<div>
   
  <div
    class="c0"
  >
    <button
      class="c1 c2"
    >
      transfer
       (
      <span>
        <span
          class="c3 c4"
          color="#fff"
        >
          address
        </span>
      </span>
      <span>
        <span>
          , 
        </span>
        <span
          class="c3 c4"
          color="#fff"
        >
          uint256
        </span>
      </span>
      )
    </button>
  </div>
   
</div>
`;

exports[`CallDetails Should match with empty data 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: transparent;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c1:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c1:hover:enabled {
  border-color: #fff;
}

.c1:active:enabled {
  border: 1px solid #303338;
}

.c1:disabled {
  color: #303338;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0 0 0.5rem;
  padding: 0;
}

.c5 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c3 {
  padding: 0.125rem 0.375rem;
  background-color: #303338;
  border-radius: 10px;
}

.c4 {
  margin: 0;
  padding: 0;
  color: #fff;
  background-color: transparent;
}

.c2 {
  font-size: 12px;
  margin: 0;
  padding: 4px 8px;
}

<div>
   
  <div
    class="c0"
  >
    <button
      class="c1 c2"
    >
      approve (
       
      <span
        class="c3 c4"
        color="#fff"
      >
        address
      </span>
      , 
      <span
        class="c3 c4"
        color="#fff"
      >
        uint256
      </span>
       
      )
    </button>
  </div>
  <div
    class="c5"
  >
    <button
      class="c1 c2"
    >
      transfer
       (
      <span>
        <span
          class="c3 c4"
          color="#fff"
        >
          address
        </span>
      </span>
      <span>
        <span>
          , 
        </span>
        <span
          class="c3 c4"
          color="#fff"
        >
          uint256
        </span>
      </span>
      )
    </button>
  </div>
   
</div>
`;
